# Hospitals

./: .gitignore  CMakeLists.txt  main.cpp
GUI/: dane.json  main.py  wyniki.json
include/: structures.hpp  tabu.hpp  ui_window.h  window.hpp
scr/: structures.cpp  tabu.cpp  window.cpp  window.ui
